@@ -60,7 +60,7 @@ public class EventsManager {
 	public static void createSticker(String text, int prior) {
 		Element el = new Element("sticker");
 		el.addAttribute(new Attribute("id", Util.generateId()));
-		el.addAttribute(new Attribute("priority", prior+""));
+		el.addAttribute(new Attribute("priority", String.valueOf(prior)));
 		el.appendChild(text);
 		_root.appendChild(el);
 	}
@@ -91,9 +91,7 @@ public class EventsManager {
 		Day d = getDay(date);
 		if (d == null)
 			return false;
-		if (d.getElement().getChildElements("event").size() > 0)
-			return true;
-		return false;
+		return d.getElement().getChildElements("event").size() > 0;
 	}
 
 	public static Collection getEventsForDate(CalendarDate date) {
@@ -231,9 +229,9 @@ public class EventsManager {
 		Elements els = d.getElement().getChildElements("event");
 		for (int i = 0; i < els.size(); i++) {
 			Element el = els.get(i);
-			if ((new Integer(el.getAttribute("hour").getValue()).intValue()
+			if ((Integer.valueOf(el.getAttribute("hour").getValue()).intValue() // if ((Integer.valueOf(el.getAttribute("hour").getValue()).intValue()
 				== hh)
-				&& (new Integer(el.getAttribute("min").getValue()).intValue()
+				&& (Integer.valueOf(el.getAttribute("min").getValue()).intValue() // && (Integer.valueOf(el.getAttribute("min").getValue()).intValue()
 					== mm))
 				return new EventImpl(el);
 		}
@@ -266,14 +264,14 @@ public class EventsManager {
 
 	private static Year createYear(int y) {
 		Element el = new Element("year");
-		el.addAttribute(new Attribute("year", new Integer(y).toString()));
+		el.addAttribute(new Attribute("year", Integer.valueOf(y).toString()));
 		_root.appendChild(el);
 		return new Year(el);
 	}
 
 	private static Year getYear(int y) {
 		Elements yrs = _root.getChildElements("year");
-		String yy = new Integer(y).toString();
+		String yy = Integer.valueOf(y).toString();
 		for (int i = 0; i < yrs.size(); i++)
 			if (yrs.get(i).getAttribute("year").getValue().equals(yy))
 				return new Year(yrs.get(i));
@@ -299,13 +297,13 @@ public class EventsManager {
 		}
 
 		public int getValue() {
-			return new Integer(yearElement.getAttribute("year").getValue())
+			return Integer.valueOf(yearElement.getAttribute("year").getValue())
 				.intValue();
 		}
 
 		public Month getMonth(int m) {
 			Elements ms = yearElement.getChildElements("month");
-			String mm = new Integer(m).toString();
+			String mm = Integer.valueOf(m).toString();
 			for (int i = 0; i < ms.size(); i++)
 				if (ms.get(i).getAttribute("month").getValue().equals(mm))
 					return new Month(ms.get(i));
@@ -315,7 +313,7 @@ public class EventsManager {
 
 		private Month createMonth(int m) {
 			Element el = new Element("month");
-			el.addAttribute(new Attribute("month", new Integer(m).toString()));
+			el.addAttribute(new Attribute("month", Integer.valueOf(m).toString()));
 			yearElement.appendChild(el);
 			return new Month(el);
 		}
@@ -342,7 +340,7 @@ public class EventsManager {
 		}
 
 		public int getValue() {
-			return new Integer(mElement.getAttribute("month").getValue())
+			return Integer.valueOf(mElement.getAttribute("month").getValue())
 				.intValue();
 		}
 
@@ -350,7 +348,7 @@ public class EventsManager {
 			if (mElement == null)
 				return null;
 			Elements ds = mElement.getChildElements("day");
-			String dd = new Integer(d).toString();
+			String dd = Integer.valueOf(d).toString();
 			for (int i = 0; i < ds.size(); i++)
 				if (ds.get(i).getAttribute("day").getValue().equals(dd))
 					return new Day(ds.get(i));
@@ -360,14 +358,14 @@ public class EventsManager {
 
 		private Day createDay(int d) {
 			Element el = new Element("day");
-			el.addAttribute(new Attribute("day", new Integer(d).toString()));
+			el.addAttribute(new Attribute("day", Integer.valueOf(d).toString()));
 			el.addAttribute(
 				new Attribute(
 					"date",
 					new CalendarDate(
 						d,
 						getValue(),
-						new Integer(
+						Integer.valueOf(
 							((Element) mElement.getParent())
 								.getAttribute("year")
 								.getValue())
@@ -402,7 +400,7 @@ public class EventsManager {
 		}
 
 		public int getValue() {
-			return new Integer(dEl.getAttribute("day").getValue()).intValue();
+			return Integer.valueOf(dEl.getAttribute("day").getValue()).intValue();
 		}
 
 		/*
